packages/svelte/tests/compiler-errors/samples/component-slot-nested-error-3/main.svelte
<script>
  import Nested from './irrelevant';
</script>

<Nested>
  <div>
    <div>
      <div slot="slot2"></div>
    </div>
  </div>
</Nested>
